changed logo height and fix right header alignment

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -40,7 +40,8 @@ a {
 
 .logo img{
   margin-left: 1.5rem;
-  height: 3rem;
+  margin-top: 1.5rem;
+  height: 7rem;
 }
 
 header .logo .header-name{
